[package]
name = "oxiquic-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OxiQUIC transport: Pure-Rust QUIC (RFC 9000/9001/9002) over rustls + tokio UDP, zero ring/aws-lc-rs."
categories = ["network-programming", "asynchronous"]
keywords = ["quic", "transport", "pure-rust", "cooljapan", "oxiquic"]

[features]
dangerous = []
h3-compat = ["dep:h3", "dep:bytes"]

[dependencies]
oxiquic-core = { workspace = true }
oxiquic-crypto = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio = { workspace = true }
h3 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
aes-gcm = { workspace = true, features = ["aes"] }
hmac = { workspace = true }
sha2 = { workspace = true }
rustls-rustcrypto = { workspace = true }

[dev-dependencies]
oxiquic-core = { path = "../oxiquic-core" }
oxitls-rcgen = { workspace = true }
criterion    = { workspace = true }
proptest     = { workspace = true }
tokio        = { workspace = true }

[[bench]]
name    = "transport"
harness = false

[[bench]]
name    = "migration"
harness = false
